<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_of_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_of_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right_of_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left_of_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right_of_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="Login logo"
        android:src="@drawable/splash_old"
        app:layout_constraintBottom_toBottomOf="@id/gl_top_of_title"
        app:layout_constraintDimensionRatio="1:1"
       app:layout_constraintVertical_bias="0.7"
        app:layout_constraintLeft_toLeftOf="@id/gl_left_of_image"
        app:layout_constraintRight_toRightOf="@id/gl_right_of_image"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_message_text_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cl_input_fields_holder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_top_of_title"
        app:layout_constraintVertical_chainStyle="spread">

        <TextView
            android:id="@+id/tv_title_big_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_big"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_size_extra_big"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_small_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_title_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_small"
            android:textColor="@color/title_text"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/dimen_size_10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_big_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_input_fields_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
        app:layout_constraintLeft_toLeftOf="@id/gl_left_of_content"
        app:layout_constraintRight_toRightOf="@id/gl_right_of_content"
        app:layout_constraintTop_toBottomOf="@id/cl_message_text_holder">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/loginEditTextLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/til_password"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/loginEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/loginEditTextLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/dimen_size_20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/loginEditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_signin_bacground"
        android:padding="@dimen/dimen_size_5dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/login_btn_text"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/gl_left_of_content"
        app:layout_constraintRight_toRightOf="@id/gl_right_of_content"
        app:layout_constraintTop_toBottomOf="@+id/cl_input_fields_holder" />

</androidx.constraintlayout.widget.ConstraintLayout>